tree-sitter-betwork/test/corpus/var.txt
==============
const with inferred type
==============
name :: "expresion"
---

(source_file
  (const_declaration
    (identifier)
    (string)))

==============
const with type
==============
name: type: "expresion"
---

(source_file
  (const_declaration
    (identifier)
    (type_identifier)
    (string)))

==============
const with qualified type
==============
name: foo.bar.type: "expresion"
---

(source_file
  (const_declaration
    name: (identifier)
    type: (member_access
      object: (member_access
        object: (identifier)
        member: (identifier))
      member: (identifier))
    value: (string)))
